# GeoAgent

./: .env.example  .gitignore  GeoAgent.pyproj  GeoAgent.slnx  README.md  ROBUSTNESS_IMPROVEMENTS.md  _fix_app.py  _fix_osm.py  app.py  create_tiananmen_buffer.py  debug_buffer_full_chain.py  debug_buffer_pipeline.py  diagnose_agent.py  diagnostic_report.json  langgraph_plan.md  log.md  pyproject.toml  requirements.txt  run_gis_tasks.py  temp_output.txt  test_backend.py  test_buffer_debug.py  test_buffer_full.py  test_clean_buffer.py  test_debug.py  test_debug2.py  test_debug3.py  test_debug4.py  test_debug5.py  test_distance.py  test_distance_extractor.py  test_e2e_buffer.py  test_e2e_fix.py  test_fix.py  test_hybrid_retriever.py  test_hybrid_simple.py  test_imports.py  test_orch.py  test_orch_debug.py  test_orch_debug2.py  (+12 more)
.cursor/rules/: workspace-cleanup.mdc
.streamlit/: config.toml
docker/: docker-compose.yml  py_requirements.txt  sandbox.dockerfile
docs/: spatial_agent_architecture.md
src/geoagent/: __init__.py  cli.py  core.py  geoagent_v2.py  langchain_agent.py  llm_config.py  output_validator.py  py.typed  py_repl.py  spatial_agent_prompts.py  streamlit_app.py  system_prompts.py  version.py  workflow.py
src/geoagent/compiler/: __init__.py  compiler.py  intent_classifier.py  orchestrator.py  task_executor.py  task_schema.py
src/geoagent/dsl/: __init__.py  protocol.py
src/geoagent/executors/: __init__.py  amap_executor.py  base.py  buffer_executor.py  choropleth_executor.py  code_sandbox_executor.py  coord_transform_executor.py  datasource_executor.py  file_fallback_handler.py  gdal_engine.py  gdal_executor.py  gdal_schema.py  gdal_tool_caller.py  heatmap_executor.py  hotspot_executor.py  hybrid_retriever_executor.py  idw_executor.py  multi_criteria_executor.py  ndvi_executor.py  osm_executor.py  overlay_executor.py  overpass_executor.py  poi_executor.py  postgis_executor.py  proximity_filter_executor.py  remote_sensing_executor.py  route_executor.py  router.py  scenario.py  shadow_executor.py  suitability_executor.py  sun_position.py  viz_executor.py  workflow_engine.py
src/geoagent/executors/domains/: __init__.py
src/geoagent/executors/domains/core/: __init__.py  arcgis_executor.py  code_sandbox_executor.py  gdal_executor.py  general_executor.py  postgis_executor.py  workflow_engine.py
src/geoagent/executors/domains/remote/: __init__.py  ndvi_executor.py  remote_sensing_executor.py
src/geoagent/executors/domains/terrain/: __init__.py  lidar_3d_executor.py  shadow_executor.py  sun_position.py
src/geoagent/executors/domains/vector/: __init__.py  buffer_executor.py  hotspot_executor.py  idw_executor.py  overlay_executor.py  route_executor.py  suitability_executor.py
src/geoagent/executors/domains/viz/: __init__.py  viz_executor.py
src/geoagent/executors/domains/web/: __init__.py  amap_executor.py  osm_executor.py  overpass_executor.py  stac_search_executor.py
src/geoagent/file_processor/: __init__.py  content_container.py  document_parser.py  geo_data_reader.py  image_processor.py  structured_data_parser.py  upload_handler.py
src/geoagent/geo_engine/: __init__.py  analysis_engine.py  data_utils.py  executor.py  geo_engine.py  io_engine.py  network_engine.py  raster_engine.py  router.py  vector_engine.py
src/geoagent/geo_engine/capability/: CAPABILITY_PROMPT.md  __init__.py  analysis_capabilities.py  io_capabilities.py  network_capabilities.py  raster_capabilities.py  router.py  vector_capabilities.py
src/geoagent/gis_tools/: __init__.py  advanced_tools.py  data_profiler.py  fixed_tools.py  geo_toolbox.py  geotoolbox.py  gis_task_tools.py  raster_ops.py
src/geoagent/knowledge/: 01_Environment.md  02_GIS_Core.md  03_GeoAI_Compute.md  04_Agent_Protocols.md  05_GIS_Theory.md  06_Python_Ecosystem.md  07_Advanced_QA.md  08_GIS_RS_Comprehensive.md  08_SelfCorrecting_REPL.md  09_API_Weaponry.md  09_Remote_Sensing.md  11_3D_Analysis.md  __init__.py  knowledge_rag.py
src/geoagent/layers/: __init__.py  architecture.py  async_pipeline.py  layer1_input.py  layer2_intent.py  layer3_orchestrate.py  layer4_dsl.py  layer5_executor.py  layer6_render.py  llm_router.py  pipeline.py  primitives.py  reasoner.py  state_machine.py
src/geoagent/layers/intent/: __init__.py  keywords_3d.py  keywords_base.py  keywords_gis.py  keywords_remote.py  keywords_web.py
src/geoagent/pipeline/: __init__.py  api_routes.py  multi_round.py  multi_round_executor.py  step_planner.py  tool_call_validator.py  workflow_orchestrator.py
src/geoagent/plugins/: __init__.py  amap_plugin.py  base.py  osm_plugin.py
src/geoagent/renderer/: __init__.py  result_renderer.py
src/geoagent/sandbox/: __init__.py  client.py  protocol.py  server.py
src/geoagent/tools/: __init__.py  arcgis_tools.py  embedding_router.py  registry.py  tool_rag.py
src/geoagent/visualization/: __init__.py  engine.py
src/geoagent/workflow_templates/: __init__.py
src/workspace/: dem.tif  sentinel.tif  study_area.shp
src/workspace/workspace/: ndvi.tif
tests/: conftest.py  test_arcgis_executor.py  test_compiler.py  test_data_profiler.py  test_file_fallback.py  test_gdal_engine.py  test_geo_engine.py  test_geoagent.py  test_langchain_rag_integration.py  test_llm_router.py  test_multi_round.py  test_sandbox_auto_routing.py  test_v2_architecture.py  test_workflow_engine.py  test_workflow_fallback.py
workspace/: shanghai_parks_osm.csv  study_area.dbf  study_area.shx  study_area_example.dbf  study_area_example.shx  土地利用.dbf  土地利用.shp.xml  大厦小区.dbf  大厦小区.shp.xml  天安门500米缓冲区.shx  天安门中心点.dbf  天安门中心点.shx
